--- a/index.html
+++ b/index.html
@@ -1068,6 +1068,7 @@
 			</script>
 	<script type="text/javascript" src="jquery-2.1.0.min.js"></script>
 	<script type="text/javascript" src="handlebars-v1.3.0.js"></script>
+	<script type="text/javascript" src="mail.js"></script>
 	<script type="text/javascript" src="script.js"></script>
 </body>
 
